Edits and updates

--- a/Code/pinniped_stranding_analysis.Rmd
+++ b/Code/pinniped_stranding_analysis.Rmd
@@ -54,14 +54,16 @@ Pinniped_Stranding_Data <- Stranding_Data %>%
   filter(Family == "Pinnipeds") %>%
   select(Family:longitude)
 
-
 Pinniped_Stranding_Data$Date <- as.Date(Pinniped_Stranding_Data$Date, format = "%Y-%m-%d")
 
 
+#Wranlging for time series analysis
 Pinniped_Stranding_Totals <- Pinniped_Stranding_Data %>%
                     filter(Family == "Pinnipeds") %>%
-                    group_by(Date) %>%
-                    summarise(Total = n())
+                    group_by(Month, Year) %>%
+                    summarise(Total = n(), .groups='drop') %>%
+                    mutate(Date = my(paste0(Month,"-",Year))) %>%
+                    select(Date, Total)
 
 Date_Range <- as.data.frame(seq.Date(from = as.Date("1990-01-01"), to = as.Date("2011-12-01"), by = "months"))
 names(Date_Range)[1] <- "Date"
@@ -71,7 +73,8 @@ Pinniped_Stranding_Totals_Final <- left_join(Date_Range, Pinniped_Stranding_Tota
 Pinniped_Stranding_Totals_Final[is.na(Pinniped_Stranding_Totals_Final)] = 0
 
 
-#Reading in and wrangling strandings by year
+
+#Reading in and wrangling strandings by year for statistical analysis
 Annual_Strandings_Totals <- read.csv("../Data/Processed/annual_strandings_totals.csv", stringsAsFactors = TRUE)
 
 Annual_Pinniped_Strandings <- Annual_Strandings_Totals %>%
@@ -79,7 +82,7 @@ Annual_Pinniped_Strandings <- Annual_Strandings_Totals %>%
 
 
 
-#Reading in and wrangling strandings by month
+#Reading in and wrangling strandings by month for statistical analysis
 Monthly_Strandings_Totals <- read.csv("../Data/Processed/monthly_strandings_totals.csv", stringsAsFactors = TRUE)
 
 Monthly_Pinniped_Strandings <- Monthly_Strandings_Totals %>%
@@ -296,7 +299,7 @@ Pinniped_ts_monthly_trend <- Kendall::SeasonalMannKendall(Pinniped_ts_monthly)
 summary(Pinniped_ts_monthly_trend)
 ```
 
-> We  fail to reject the H0 that monthly pinniped strandings are stationary, with a p-value of 0.48. The decomposition indicates seasonality, which fits with the patterns that were seen in the exploratory analysis.
+> We  reject the H0 that monthly pinniped strandings are stationary, with a p-value of 1.41e-07. The decomposition indicates seasonality, which fits with the patterns that were seen in the exploratory analysis.
 
 
 
@@ -315,7 +318,7 @@ summary(Pinniped_ts_yearly_trend)
 
 Pinniped Summary:
 
-Both graphing and a time series analysis indicate that there is trend in the yearly totals of pinniped strandings and this trend is increasing.  Additionally, 85.7 percent of the years were statistically significant for pinniped strandings.  The monthly time series indicated that there was no monthly trend, however the decomposition plot did indicate seasonality, which could be attributed to pupping seasons. 11 of the 12 months were statistically significant for strandings.  Realizing there is an overall trend is the first step in studying what is causing this trend and to determine if there are ways to stop the trend, or if not, how best to manage it.
+Both graphing and a time series analysis indicate that there is trend in the yearly totals of pinniped strandings and this trend is increasing.  Additionally, 85.7 percent of the years were statistically significant for pinniped strandings.  The monthly time series indicated that there was seasonality, which could be attributed to pupping seasons. 11 of the 12 months were statistically significant for strandings.  Realizing there are trends is the first step in studying what is causing these trends and to determine if there are ways to stop or manage them.
 
 62.5 percent of pinniped strandings happened within 40km of the "mean stranding point."  By knowing where and when pinnipeds are most likely to strand, the environmental factors of those places and times can be studied in order to determine the conditions that cause strandings.  This knowledge could aid in stranding prevention and/or mitigation measures.  
 
