--- a/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
+++ b/Docs/Meza-FidalgoOzogPepper_ENV872_Project_Draft.Rmd
@@ -203,21 +203,10 @@ mapview(Strandings_sf, zcol = "Family")
 \newpage
 
 # Analysis
-* Flow between text and visualizations is cohesive
-* Visualizations and statistical tests pertain directly to specific questions 
-* Statistical results are reported in plain language with relevant statistical output in parentheses 
-* Findings are reported clearly in relation to research questions
-
-
-NOTE-- Did we ever do an analysis for the entire data set without dividing it by family????
-
-
 Because we decided to divide the data into groups by their families, we conducted separate analysis for each of the families. Our research questions are the following:
-
 * Are there years or months where the number of strandings for each family are significantly different?
-* Are there trends in the family strandings based off this dataset?
+* Are there trends in each of the family strandings based off this dataset?
 
-[continue adding more depth to give background to the analysis here]
 
 
 1. **Pinnipeds**:
